@@ -35,16 +35,19 @@ libport_HEADERS +=				\
 	$(libport_srcdir)/hash.hh		\
 	$(libport_srcdir)/lockable.hh		\
 	$(libport_srcdir)/network.h		\
+	$(libport_srcdir)/ref-pt.hh		\
+	$(libport_srcdir)/select-const.hh	\
 	$(libport_srcdir)/semaphore.hh		\
 	$(libport_srcdir)/semaphore.hxx		\
 	$(libport_srcdir)/singleton-ptr.hh	\
+	$(libport_srcdir)/symbol.hh		\
+	$(libport_srcdir)/symbol.hxx		\
 	$(libport_srcdir)/thread.hh		\
 	$(libport_srcdir)/uffloat.hh		\
 	$(libport_srcdir)/ufloat.h		\
 	$(libport_srcdir)/ufloat.hh		\
 	$(libport_srcdir)/ull-fixed-point.hh	\
 	$(libport_srcdir)/ulong-fixed-point.hh	\
-	$(libport_srcdir)/ref-pt.hh		\
 	$(libport_srcdir)/utime.hh		\
 	$(libport_srcdir)/windows.hh
 
