@@ -1,3 +1,9 @@
+2007-05-11  Akim Demaille  <demaille@gostai.com>
+
+	select-const and symbols
+	* select-const.hh, symbol.cc, symbol.hh, symbol.hxx: New.
+	* fwd.hh, libport-sources.mk, libport.mk: Adjust.
+
 2007-04-10  POTHIER Benoit  <pothier@gostai.com>
 
 	Be more verbose in semaphores. Fix windows return values.  
